--- a/Poject_01/index.html
+++ b/Poject_01/index.html
@@ -8,19 +8,26 @@
 <style>
     *{margin: 0;padding: 0;box-sizing: border-box;}
 
-    main{width: 100%;height:100vh;background-color: aqua;display: flex;justify-content: center;align-items: center;gap:15px;}
+    body{background-image:url(wp1970345-spice-and-wolf-wallpapers.jpg) ;background-repeat: no-repeat;background-position: center;
+        background-size: cover;}
 
+    main{width: 100%;height:100vh;display: flex;justify-content: center;align-items: center;gap:15px;}
 
+.login{width: 80%;padding: 10px 5PX;border-radius: 15px;margin: 5px auto; border: transparent;display: block;background-color: rgb(66, 62, 62);}
+::placeholder{color:rgb(255, 255, 255);}
+.go{margin:15px auto;display: block;width: 30%;height: 25px;border-radius: 25px;border: transparent;background-color: turquoise;}
+.go:hover{background-color:rgb(20, 216, 69) ;transition:1s;cursor:pointer;}
+a:visited{color:black;}
+a{text-decoration: none;margin:15px auto;text-align: center;padding-top: 3  px;}
 
 .bloco1, .bloco2{width: 25%;height: 450px;
-background-color:rgba(211,210,210,0.631);border: 1px solid rgb(165,164,164);border-radius: 20px;padding: 15px;}
+background-color: rgba(199, 186, 4, 0.774);border: 1px solid rgb(250, 171, 237);border-radius: 20px;padding: 15px;}
 
 .titulo{text-align: center;margin: 20px 0;}
 
-.bloco1 p{text-align: justify;line-height: 25px;font-size: 18px;}
+.bloco1 p{text-align: justify;line-height: 25px;font-size: 14px;}
 
-.bloco2{display: flex;}
-.bloco2 form{height: 250px;}
+
 
 </style>
 
@@ -30,18 +37,21 @@ background-color:rgba(211,210,210,0.631);border: 1px solid rgb(165,164,164);bord
     
 <main>
     <div class="bloco1">
-        <h2 class="titulo">Projeto - Quizz</h2>
-        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Rem pariatur debitis autem similique inventore. Beatae laborum, dicta iure, iusto quidem illum deleniti eos, blanditiis non possimus qui aut quo maiores!</p>
-            <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Sapiente unde minima adipisci expedita quis nobis sunt amet facilis velit, architecto at molestias ipsum eius, cum, neque tempore illum ipsa numquam!
-        </p>
+        <h2 class="titulo">Spice And Wolf</h2>
+        <p>Spice and Wolf is a Japanese light novel series written by Isuna Hasekura, with illustrations by Jū Ayakura. ASCII Media Works has published 24 novels since February 2006 under their Dengeki Bunko imprint. ASCII Media Works reported that as of October 2008, over 2.2 million copies of the first nine novels have been sold in Japan.</p>
+            <br><p>The series has been called a "unique fantasy" by Mainichi Shimbun due to the plot focusing on economics, trade, and peddling rather than the typical staples of fantasy such as swords and magic.</p>
+                <br><p>Yen Press licensed the light novels and is releasing them in English in North America. ASCII Media Works has published five volumes of a spin-off light novel series titled Wolf and Parchment since September 2016.
+            </p>
         </div>
-    <div class="bloco2"><h2 class="titulo">Login</h2>
-        <form action=""></form>
-    <input type="E-mail" placeholder="email@exemplo.com">
-    <input type="Password" placeholder="Senha">
-    <input type="submit" value="Acessar">
-    
-    </div>
+
+    <div class="bloco2"><h2 class="titulo">Dados De Login</h2>
+        <form action="questions.html">
+    <input type="E-mail" placeholder="email@exemplo.com" class="login">
+    <input type="Password" placeholder="senha123" class="login">
+    <input type="submit" value="Acessar" class="go"></a>
+</form>    
+</div>
+
 </main>
 
 </body>
